add missing dice  random generator